<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ENUM_StageEnableMode" Id="{43aedf2d-0b75-40d5-bd71-67b45334628a}">
    <Declaration><![CDATA[{attribute 'obsolete' := 'Use E_StageEnableMode'}
TYPE ENUM_StageEnableMode : E_StageEnableMode; END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>